@@ -1,3 +1,7 @@
+2007-06-17  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* TabControl.cs, TabItem.cs: Improved (the TabControl sample is displayed correctly now).
+
 2007-06-15  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* TabControl.cs, TabItem.cs: Partially implemented.
